--- a/Admin.Master
+++ b/Admin.Master
@@ -80,7 +80,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> - Library Management System</p>
             </footer>
         </div>
     </form>
